--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=products
 
-spring.datasource.url=jdbc:mysql://avnadmin:AVNS_aWCWsn67JoVm3mgNrR_@mysql-3ba2089a-bobpeter7704-5206.d.aivencloud.com:13454/defaultdb?ssl-mode=REQUIRED
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_aWCWsn67JoVm3mgNrR_
+spring.datasource.url=${spring.datasource.url}
+spring.datasource.username=${spring.datasource.username}
+spring.datasource.password=${spring.datasource.password}
 
+spring.mail.username=${SUPPORT.EMAIL}
+spring.mail.password=${APP.PASSWORD}
+security.jwt.secret-key =${JWT.SECRET.KEY}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
@@ -11,3 +14,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #(create,update,create-drop,validate)
 spring.jpa.hibernate.ddl-auto=update
+
+spring.config.import=optional:file:.env[.properties]
